--- a/example/index.html
+++ b/example/index.html
@@ -22,27 +22,19 @@
     <script>
       requirejs(['../lib/index.js'], function(GRender) {
         console.log(GRender)
-        const circle = new GRender.Circle({
+        const rect = new GRender.Rect({
           shape: {
-            x: 50,
-            y: 100,
-            r: 40
+            x: 10,
+            y: 20,
+            width: 80,
+            height: 40
           }
         })
-        console.log(circle)
-        circle.on('click', () => console.log('on'))
-        circle.once('click', () => console.log('once'))
-
-        let i = 0
-        setInterval(() => {
-          i++
-          circle.emit('click')
-          if (i === 10) {
-            circle.off()
-          }
-        }, 1000)
+        rect.translate([10, 20])
+        console.log(rect)
         const grender = new GRender.default(document.querySelector('#app'))
-        grender.add(circle)
+        grender.add(rect)
+        console.log(grender)
       })
     </script>
   </body>
