--- a/example/index.html
+++ b/example/index.html
@@ -13,11 +13,16 @@
         width: 100%;
         height: 100%;
       }
+      #app {
+        border-top: 1px solid #000;
+      }
     </style>
   </head>
   <body>
     <noscript><strong>很抱歉，没有JavaScript，网站不能正常工作。请启用JavaScript。</strong></noscript>
-    <div id="app"></div>
+    <div style="padding-top: 50px; height: 100%;">
+      <div id="app"></div>
+    </div>
     <script src="./require.js"></script>
     <script>
       requirejs(['../lib/index.js'], function(GRender) {
@@ -81,12 +86,13 @@
         grender.add(ellipse1)
 
         grender.shapes.forEach(shape => {
-          shape.on('mousedown', () => {
+          shape.on('mousedown', e => {
+            console.log(e)
             shape.brush.fillStyle = 'red'
             grender.refresh()
           })
 
-          shape.on('mouseup', () => {
+          grender.on('mouseup', () => {
             shape.brush.fillStyle = 'rgba(0,0,0,0)'
             grender.refresh()
           })
