--- a/example/index.html
+++ b/example/index.html
@@ -18,94 +18,93 @@
   <body>
     <noscript><strong>很抱歉，没有JavaScript，网站不能正常工作。请启用JavaScript。</strong></noscript>
     <div id="app"></div>
-    <script src="./require.js"></script>
+    <script src="../dist/grender.js"></script>
     <script>
-      requirejs(['../lib/index.js'], function(GRender) {
-        const grender = new GRender.default(document.querySelector('#app'))
+      console.log(window.GRender)
+      const grender = new GRender.default(document.querySelector('#app'))
 
-        const rect1 = new GRender.Rect({
-          shape: {
-            x: 0,
-            y: 0,
-            width: 40,
-            height: 80
-          },
-          z: 2
-        })
-        const circle1 = new GRender.Circle({
-          shape: {
-            x: 10,
-            y: 20,
-            r: 40
-          },
-          z: 1
-        })
-        circle1.translate(100, 200)
+      const rect1 = new GRender.Rect({
+        shape: {
+          x: 0,
+          y: 0,
+          width: 40,
+          height: 80
+        },
+        z: 2
+      })
+      const circle1 = new GRender.Circle({
+        shape: {
+          x: 10,
+          y: 20,
+          r: 40
+        },
+        z: 1
+      })
+      circle1.translate(100, 200)
 
-        const rect2 = new GRender.Rect({
-          shape: {
-            x: 0,
-            y: 50,
-            width: 40,
-            height: 80
-          },
-          z: 1
-        })
+      const rect2 = new GRender.Rect({
+        shape: {
+          x: 0,
+          y: 50,
+          width: 40,
+          height: 80
+        },
+        z: 1
+      })
 
-        rect1.rotate(30).translate(100, 20)
-        rect2
-          .rotate(30)
-          .translate(200, 50)
-          .scale(2, 1)
+      rect1.rotate(30).translate(100, 20)
+      rect2
+        .rotate(30)
+        .translate(200, 50)
+        .scale(2, 1)
 
-        const ellipse1 = new GRender.Ellipse({
-          shape: {
-            x: 100,
-            y: 100,
-            rx: 90,
-            ry: 60
-          },
-          brush: {
-            lineWidth: 20
-          },
-          z: 3
-        })
+      const ellipse1 = new GRender.Ellipse({
+        shape: {
+          x: 100,
+          y: 100,
+          rx: 90,
+          ry: 60
+        },
+        brush: {
+          lineWidth: 20
+        },
+        z: 3
+      })
 
-        // ellipse1.translate(100, 20)
+      // ellipse1.translate(100, 20)
 
-        console.log(rect1)
+      console.log(rect1)
 
-        grender.add(rect1)
-        grender.add(rect2)
-        grender.add(circle1)
-        grender.add(ellipse1)
+      grender.add(rect1)
+      grender.add(rect2)
+      grender.add(circle1)
+      grender.add(ellipse1)
 
-        grender.shapes.forEach(shape => {
-          shape.on('dragging', e => {
-            shape.brush.fillStyle = 'red'
-            shape.translate(e.x, e.y)
-            grender.refresh()
-          })
-
-          shape.on('mouseover', e => {
-            shape.brush.fillStyle = 'red'
-            grender.refresh()
-          })
-          shape.on('mouseout', e => {
-            shape.brush.fillStyle = 'rgba(0,0,0,0)'
-            grender.refresh()
-          })
-
-          grender.on('mouseup', () => {
-            shape.brush.fillStyle = 'rgba(0,0,0,0)'
-            grender.refresh()
-          })
+      grender.shapes.forEach(shape => {
+        shape.on('dragging', e => {
+          shape.brush.fillStyle = 'red'
+          shape.translate(e.x, e.y)
+          grender.refresh()
         })
 
-        console.log(grender)
-        window.addEventListener('resize', () => {
-          grender.resize()
+        shape.on('mouseover', e => {
+          shape.brush.fillStyle = 'red'
+          grender.refresh()
         })
+        shape.on('mouseout', e => {
+          shape.brush.fillStyle = 'rgba(0,0,0,0)'
+          grender.refresh()
+        })
+
+        grender.on('mouseup', () => {
+          shape.brush.fillStyle = 'rgba(0,0,0,0)'
+          grender.refresh()
+        })
+      })
+
+      console.log(grender)
+      window.addEventListener('resize', () => {
+        grender.resize()
       })
     </script>
   </body>
