--- a/course/demo2.html
+++ b/course/demo2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>demo1</title>
+    <title>demo2</title>
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -15,6 +15,19 @@
       ctx.fillStyle = '#f00'
       ctx.strokeStyle = '#f00'
       // x:50,y:50,宽100高50的矩形
+      ctx.moveTo(50, 50)
+      ctx.lineTo(150, 50)
+      ctx.lineTo(150, 100)
+      ctx.lineTo(50, 100)
+      ctx.closePath()
+      ctx.stroke()
+      ctx.fill()
+
+      // 图形整体向右向下移动50
+      // 采用坐标系平移的方式
+      ctx.translate(50,50)
+      // x:100,y:100,宽100高50的矩形
+      // 与移动前的参数一致
       ctx.moveTo(50, 50)
       ctx.lineTo(150, 50)
       ctx.lineTo(150, 100)
